WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205230
Fix bad exception assertion in ExceptionHelpers.cpp's createError().
https://bugs.webkit.org/show_bug.cgi?id=205230
Summary
Fix bad exception assertion in ExceptionHelpers.cpp's createError().
Mark Lam
Reported
2019-12-13 17:30:16 PST
<
rdar://problem/57875688
>
Attachments
proposed patch.
(3.32 KB, patch)
2019-12-13 17:33 PST
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-12-13 17:33:59 PST
Created
attachment 385664
[details]
proposed patch.
Yusuke Suzuki
Comment 2
2019-12-13 17:39:17 PST
Comment on
attachment 385664
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=385664&action=review
r=me with nit.
> Source/JavaScriptCore/runtime/ExceptionHelpers.cpp:269 > - EXCEPTION_ASSERT(scope.exception() || !!valueDescription); > - if (!valueDescription) { > + if (scope.exception() || !valueDescription) {
Can you add a comment why we are not returning when we have `scope.exception()`?
Mark Lam
Comment 3
2019-12-13 17:41:39 PST
Thanks for the review. (In reply to Yusuke Suzuki from
comment #2
)
> > Source/JavaScriptCore/runtime/ExceptionHelpers.cpp:269 > > - EXCEPTION_ASSERT(scope.exception() || !!valueDescription); > > - if (!valueDescription) { > > + if (scope.exception() || !valueDescription) { > > Can you add a comment why we are not returning when we have > `scope.exception()`?
Sure.
Mark Lam
Comment 4
2019-12-13 17:51:44 PST
Landed in
r253515
: <
http://trac.webkit.org/r253515
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug